# DeepvacDemoOnAndroid

./: .gitignore  .gitmodules  README.md
audio_emotion_android/: README.md  settings.gradle
audio_emotion_android/app/: build.gradle
audio_emotion_android/app/src/main/: AndroidManifest.xml
audio_emotion_android/app/src/main/assets/: label.txt
audio_emotion_android/app/src/main/java/com/sbu/demo/: AudioCodec.java  AudioDecode.java  AudioDecodeRunnable.java  AudioInfo.java  FileStorageHelper.java  LoadingDialog.java  LoadingView.java  MainActivity.java
audio_emotion_android/app/src/main/res/layout/: activity_main_1.xml
audio_emotion_android/app/src/main/res/values/: strings.xml
audio_emotion_android/audio_cls/: build.gradle
audio_emotion_android/audio_cls/src/androidTest/java/com/audiocls/lib/: ExampleInstrumentedTest.java
audio_emotion_android/audio_cls/src/main/: AndroidManifest.xml
audio_emotion_android/audio_cls/src/main/cpp/: CMakeLists.txt  native-lib.cpp
audio_emotion_android/audio_cls/src/main/cpp/include/essentia/: syszux_vggish.h
audio_emotion_android/audio_cls/src/main/java/com/audiocls/lib/: AudioCls.java  AudioDecode.java  AudioInfo.java  FileStorageHelper.java
audio_emotion_android/audio_cls/src/test/java/com/audiocls/lib/: ExampleUnitTest.java
audio_emotion_android/gradle/wrapper/: gradle-wrapper.properties
body_seg_android/: settings.gradle
body_seg_android/BodySegment/: CMakeLists.txt  README.md  build.gradle
body_seg_android/BodySegment/release/: output.json
body_seg_android/BodySegment/src/main/: AndroidManifest.xml
body_seg_android/BodySegment/src/main/java/com/deepait/bodysegment/: BodySegment.java  BodySegmentActivity.java  BodySegmentFragment.java  DeviceConst.java  FileUtils.java  FpsCounter.java  Helper.java  LocalApplication.java  MainActivity.java
body_seg_android/BodySegment/src/main/java/com/deepait/bodysegment/common/activity/: DemoBaseActivity.java
body_seg_android/BodySegment/src/main/java/com/deepait/bodysegment/common/component/: CameraSetting.java  CustomDialog.java  DrawView.java  PreviewFrameLayout.java  TitleBar.java
body_seg_android/BodySegment/src/main/java/com/deepait/bodysegment/common/fragment/: BaseFragment.java
body_seg_android/BodySegment/src/main/java/com/deepait/bodysegment/common/sufaceHolder/: DemoSurfaceHolder.java
body_seg_android/BodySegment/src/main/jni/BodySegment/: BodySegment_jni.cc  BodySegment_jni.h
body_seg_android/BodySegment/src/main/jni/cc/: fps_counter_jni.h  helper_jni.cc  helper_jni.h
body_seg_android/BodySegment/src/main/res/layout/: activity_main.xml  base_fragment_layout.xml  fragment_body_detector.xml
body_seg_android/BodySegment/src/main/res/values/: strings.xml
clothes_seg_android/: README.md  settings.gradle
clothes_seg_android/AccessorySegment/: CMakeLists.txt  build.gradle
clothes_seg_android/AccessorySegment/release/: output.json
clothes_seg_android/AccessorySegment/src/main/: AndroidManifest.xml
clothes_seg_android/AccessorySegment/src/main/java/com/deepait/accessorysegment/: AccessorySegment.java  AccessorySegmentActivity.java  AccessorySegmentFragment.java  DeviceConst.java  FileUtils.java  FpsCounter.java  Helper.java  LocalApplication.java  MainActivity.java
clothes_seg_android/AccessorySegment/src/main/java/com/deepait/accessorysegment/common/activity/: DemoBaseActivity.java
clothes_seg_android/AccessorySegment/src/main/java/com/deepait/accessorysegment/common/component/: CameraSetting.java  CustomDialog.java  DrawView.java  PreviewFrameLayout.java  TitleBar.java
clothes_seg_android/AccessorySegment/src/main/java/com/deepait/accessorysegment/common/fragment/: BaseFragment.java
clothes_seg_android/AccessorySegment/src/main/java/com/deepait/accessorysegment/common/sufaceHolder/: DemoSurfaceHolder.java
clothes_seg_android/AccessorySegment/src/main/jni/BodySegment/: AccessorySegment_jni.cc  AccessorySegment_jni.h
clothes_seg_android/AccessorySegment/src/main/jni/cc/: fps_counter_jni.h  helper_jni.h
clothes_seg_android/AccessorySegment/src/main/res/layout/: activity_main.xml  base_fragment_layout.xml  fragment_body_detector.xml
clothes_seg_android/AccessorySegment/src/main/res/values/: colors.xml  strings.xml
scene_cls_android/: README.md  settings.gradle
scene_cls_android/app/: build.gradle
scene_cls_android/app/src/main/: AndroidManifest.xml
scene_cls_android/app/src/main/java/com/sbu/demo/: LoadingDialog.java  LoadingView.java  MainActivity.java
scene_cls_android/app/src/main/res/layout/: activity_main_1.xml
scene_cls_android/app/src/main/res/menu/: main.xml  menu.xml
scene_cls_android/app/src/main/res/values/: colors.xml  strings.xml
scene_cls_android/app/src/test/java/com/sbu/demo/: ExampleUnitTest.java
scene_cls_android/gradle/wrapper/: gradle-wrapper.properties
scene_cls_android/scls_lib/: build.gradle
scene_cls_android/scls_lib/src/androidTest/java/com/sbu/scls_lib/: ExampleInstrumentedTest.java
scene_cls_android/scls_lib/src/main/: AndroidManifest.xml
scene_cls_android/scls_lib/src/main/assets/: label.txt
scene_cls_android/scls_lib/src/main/cpp/: CMakeLists.txt  SceneClassify.cpp  SceneClassify.h  native-lib.cpp
scene_cls_android/scls_lib/src/main/res/values/: strings.xml
scene_cls_android/scls_lib/src/test/java/com/sbu/scls_lib/: ExampleUnitTest.java
video_clip_android/: README.md  settings.gradle
video_clip_android/app/: build.gradle
video_clip_android/app/src/androidTest/java/com/sbu/demo/: ExampleInstrumentedTest.java
video_clip_android/app/src/main/: AndroidManifest.xml
video_clip_android/app/src/main/java/com/sbu/demo/: App.java  LoadingDialog.java  LoadingView.java  MainActivity.java
video_clip_android/app/src/main/res/layout/: activity_main_1.xml  loadingdialog.xml
video_clip_android/app/src/main/res/values/: strings.xml  styles.xml
video_clip_android/gradle/wrapper/: gradle-wrapper.properties
